networking/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webapp 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: web-app-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: app.kodekloud.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port: 
              number: 80
